crates/parse/src/tests/snapshots/if_then_else_if.snap
---
source: crates/parse/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "\nif a > b {\n    foo\n} else if c < a {\n    bar\n}\n"
- Ok:
    nodes:
      - kind:
          Cond:
            cond_expr:
              kind:
                BinOp:
                  op: Gt
                  lhs:
                    kind:
                      Ident:
                        name: a
                        ty: ~
                  rhs:
                    kind:
                      Ident:
                        name: b
                        ty: ~
                  ty: ~
            then_block:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: foo
                          ty: ~
                  ty: ~
            else_block:
              kind:
                Block:
                  list:
                    - kind:
                        Cond:
                          cond_expr:
                            kind:
                              BinOp:
                                op: Lt
                                lhs:
                                  kind:
                                    Ident:
                                      name: c
                                      ty: ~
                                rhs:
                                  kind:
                                    Ident:
                                      name: a
                                      ty: ~
                                ty: ~
                          then_block:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Ident:
                                        name: bar
                                        ty: ~
                                ty: ~
                          else_block: ~
                          ty: ~
                  ty: ~
            ty: ~
- "(if (> a b) '(foo) '((if (< c a) '(bar))))"

