crates/parse/src/tests/snapshots/let_bad_2.snap
---
source: crates/parse/src/tests.rs
assertion_line: 225
expression: "(test[1], ast, ast_string)"
---
- "let x: int"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn: Int32
            init: ~
- "(let x:int32)"

