crates/parse/src/tests/snapshots/let_bad_3.snap
---
source: crates/parse/src/tests.rs
assertion_line: 225
expression: "(test[1], ast, ast_string)"
---
- "let x:"
- Err:
    message: "Expecting type annotation in `let`. Got `EOF`"
    line: 0
    column: 0
- "Expecting type annotation in `let`. Got `EOF`"

