crates/parse/src/tests/snapshots/let_bad_5.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- let
- Err:
    - message: "Expecting identifier in `let` typed declaration. Got `EOF`"
      line: 0
      column: 0
- "Expecting identifier in `let` typed declaration. Got `EOF`"

