crates/parse/src/tests/snapshots/logical_ops_and.snap
---
source: crates/parse/src/tests.rs
assertion_line: 237
expression: "(test[1], ast, ast_string)"
---
- x && 1
- Ok:
    nodes:
      - kind:
          BinOp:
            op: And
            lhs:
              kind:
                Ident:
                  name: x
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 1
                  ty: ~
            ty: ~
- (&& x 1)

